[ux,bugfix][s]: Fixed CSS on slug editor. Squashed premature 'url is available' message.

--- a/ckan/public/css/style.css
+++ b/ckan/public/css/style.css
@@ -712,8 +712,8 @@ ul.datasets .openness li {
 /* =================== */
 /* = URL Slug Editor = */
 /* =================== */
-input.url-slug-editor {
-  width: 250px;
+input.url-input {
+  width: 220px;
 }
 
 
